Fix FASTA sequence retrieval, code tag overflow in modal

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,4 +1,9 @@
 /* Override or extend Bootstrap */
+code {
+  white-space: normal;
+  word-wrap: break-word;
+}
+
 .text-monospace {
   font-family: monospace;
 }
